updated papers and cv

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,44 @@
 ---
 ---
 
+@incollection{chen2019mtd,
+  abbr = {Book},
+  title = {MTD Techniques for Memory Protection Against Zero-Day Attacks},
+  author = {Chen, Ping and collaborators},
+  booktitle = {Adversarial and Uncertain Reasoning for Adaptive Cyber Defense},
+  publisher = {Springer},
+  year = {2019},
+  bibtex_show = {true}
+}
+
+@incollection{chen2019rl,
+  abbr = {Book},
+  title = {Reinforcement Learning for Adaptive Cyber Defense Against Zero-Day Attacks},
+  author = {Chen, Ping and collaborators},
+  booktitle = {Adversarial and Uncertain Reasoning for Adaptive Cyber Defense},
+  publisher = {Springer},
+  year = {2019},
+  bibtex_show = {true}
+}
+
+@book{emc2014sddc,
+  abbr = {Book},
+  title = {Software Defined Data Center Technology and Application},
+  author = {Chen, Ping and EMC co-authors},
+  publisher = {Electronic Industry Press},
+  year = {2014},
+  bibtex_show = {true}
+}
+
+@book{emc2013bigdata,
+  abbr = {Book},
+  title = {Big Data Strategy, Technology and Application},
+  author = {Chen, Ping and EMC co-authors},
+  publisher = {Electronic Industry Press},
+  year = {2013},
+  bibtex_show = {true}
+}
+
 @inproceedings{tan2025revprag,
   abbr = {EMNLP},
   title = {RevPRAG: Revealing Poisoning Attacks in Retrieval-Augmented Generation through {LLM} Activation Analysis},
@@ -23,27 +61,145 @@
 
 @inproceedings{cai2025mirage,
   abbr = {ACL},
-  title = {{MIRAGE}: Exploring How Large Language Models Perform in Complex Social Interactive Environments},
+  title = {MIRAGE: Exploring How Large Language Models Perform in Complex Social Interactive Environments},
   author = {Cai, Yin and Chen, Ping},
   booktitle = {Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics},
   year = {2025},
   bibtex_show = {true}
 }
 
-@inproceedings{zhang2024rainbow,
+@inproceedings{zhang2025concept,
   abbr = {CVPR},
-  title = {{RAINBOW}: Risk-aware Navigation for Intelligent Connected Vehicles},
-  author = {Zhang, Lingyun and Xie, Yu and Fu, Yanwei and Chen, Ping and others},
+  title = {Concept Replacer: Replacing Sensitive Concepts in Diffusion Models via Precision Localization},
+  author = {Zhang, Lingyun and Xie, Yu and Fu, Yanwei and Chen, Ping},
   booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year = {2025},
+  bibtex_show = {true},
+  selected = {true}
+}
+
+@article{tan2025fedrab,
+  abbr = {JCS},
+  title = {FedRAB: Robust Federated Learning Against Backdoor Attacks Based on Collaborative Defense with Smoothing},
+  author = {Tan, Xue and Chen, Ping},
+  journal = {Journal of Computer Security},
+  year = {2025},
+  bibtex_show = {true}
+}
+
+@article{jin2025huntfuzz,
+  abbr = {JCS},
+  title = {HuntFUZZ: Enhancing Error Handling Testing through Clustering Based Fuzzing},
+  author = {Jin, Wei and Chen, Ping},
+  journal = {Journal of Computer Security},
+  year = {2025},
+  bibtex_show = {true}
+}
+
+@article{jin2025sqlaser,
+  abbr = {JCS},
+  title = {SQLaser: Detecting DBMS Logic Bugs with Clause-Guided Fuzzing},
+  author = {Jin, Wei and Chen, Ping},
+  journal = {Journal of Computer Security},
+  year = {2025},
+  bibtex_show = {true}
+}
+
+@article{jin2024dslr,
+  abbr = {JCS},
+  title = {DSLR--: A Low-Overhead Data Structure Layout Randomization for Defending Data-Oriented Programming},
+  author = {Jin, Wei and Chen, Ping},
+  journal = {Journal of Computer Security},
   year = {2024},
   bibtex_show = {true}
 }
 
-@inproceedings{guo2024adaptive,
+@article{zhang2022semantics,
+  abbr = {TDSC},
+  title = {Semantics-Preserving Reinforcement Learning Attack Against Graph Neural Networks for Malware Detection},
+  author = {Zhang, Lan and Liu, Peng and Choi, Yoon-Ho and Chen, Ping},
+  journal = {IEEE Transactions on Dependable and Secure Computing},
+  year = {2022},
+  bibtex_show = {true}
+}
+
+@article{hu2021codesign,
+  abbr = {TIFS},
+  title = {A Co-design Adaptive Defense Scheme with Bounded Security Damages Against Heartbleed-like Attacks},
+  author = {Hu, Zhisheng and Chen, Ping and Zhu, Minghui and Liu, Peng},
+  journal = {IEEE Transactions on Information Forensics and Security},
+  year = {2021},
+  bibtex_show = {true}
+}
+
+@article{li2020deepreturn,
+  abbr = {JCS},
+  title = {DEEPRETURN: A Deep Neural Network Can Learn How to Detect Previously-Unseen ROP Payloads without Using Any Heuristics},
+  author = {Li, Xusheng and Hu, Zhisheng and Wang, Haizhou and Fu, Yiwei and Chen, Ping and Zhu, Minghui and Liu, Peng},
+  journal = {Journal of Computer Security},
+  year = {2020},
+  bibtex_show = {true}
+}
+
+@article{hu2019convergence,
+  abbr = {Automatica},
+  title = {On Convergence Rates of Game Theoretic Reinforcement Learning Algorithms},
+  author = {Hu, Zhisheng and Zhu, Minghui and Chen, Ping and Liu, Peng},
+  journal = {Automatica},
+  year = {2019},
+  bibtex_show = {true}
+}
+
+@inproceedings{xu2017pomp,
   abbr = {USENIX Security},
-  title = {Adaptive Security Hardening for Autonomous Driving Software Stacks},
-  author = {Guo, Jiaqi and Yuan, Chunfeng and Chen, Ping},
-  booktitle = {Proceedings of the 33rd USENIX Security Symposium},
-  year = {2024},
+  title = {POMP: Postmortem Program Analysis with Hardware-Enhanced Post-Crash Artifacts},
+  author = {Xu, Jun and Mu, Dongliang and Xing, Xinyu and Liu, Peng and Chen, Ping and Mao, Bing},
+  booktitle = {Proceedings of the 26th USENIX Security Symposium},
+  year = {2017},
+  bibtex_show = {true}
+}
+
+@inproceedings{chen2017chameleon,
+  abbr = {DSN},
+  title = {What You See Is Not What You Get! Thwarting Just-in-Time ROP with Chameleon},
+  author = {Chen, Ping and Xu, Jun and Hu, Zhisheng and Xing, Xinyu and Zhu, Minghui and Mao, Bing and Liu, Peng},
+  booktitle = {Proceedings of the 47th Annual IEEE/IFIP International Conference on Dependable Systems and Networks},
+  year = {2017},
+  bibtex_show = {true}
+}
+
+@inproceedings{liang2017dancing,
+  abbr = {VEE},
+  title = {Dancing with Wolves: Towards Practical Event-driven VMM Monitoring},
+  author = {Liang, Deng and Liu, Peng and Xu, Jun and Chen, Ping and Zeng, Qingkai},
+  booktitle = {Proceedings of the 13th ACM SIGPLAN/SIGOPS International Conference on Virtual Execution Environments},
+  year = {2017},
+  bibtex_show = {true}
+}
+
+@inproceedings{xu2016credal,
+  abbr = {CCS},
+  title = {CREDAL: Towards Locating a Memory Corruption Vulnerability with Your Core Dump},
+  author = {Xu, Jun and Mu, Dongliang and Chen, Ping and Xing, Xinyu and Liu, Peng},
+  booktitle = {Proceedings of the 23rd ACM Conference on Computer and Communications Security},
+  year = {2016},
+  bibtex_show = {true}
+}
+
+@inproceedings{chen2015adaptive,
+  abbr = {ESORICS},
+  title = {A Practical Approach for Adaptive Data Structure Layout Randomization},
+  author = {Chen, Ping and Xu, Jun and Lin, Zhiqiang and Mao, Bing and Liu, Peng},
+  booktitle = {Proceedings of the 20th European Symposium on Research in Computer Security},
+  year = {2015},
+  bibtex_show = {true}
+}
+
+@inproceedings{wu2014system,
+  abbr = {DSN},
+  title = {System Call Redirection: A Practical Approach to Meeting Real-world VMI Needs},
+  author = {Wu, Rui and Chen, Ping and Liu, Peng and Mao, Bing},
+  booktitle = {Proceedings of the 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks},
+  year = {2014},
   bibtex_show = {true}
 }
