--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -87,6 +87,15 @@
   bibtex_show = {true}
 }
 
+@article{zhang2025firmupdate,
+  abbr = {Computer and Security},
+  title = {FirmUpdate: Automated multi-phase static analysis for detecting firmware update vulnerabilities in IoT Linux-based firmware},
+  author = {Zhang, Jian and Chen, Ping},
+  journal = {Computer and Security},
+  year = {2025},
+  bibtex_show = {true}
+}
+
 @article{jin2025huntfuzz,
   abbr = {JCS},
   title = {HuntFUZZ: Enhancing Error Handling Testing through Clustering Based Fuzzing},
