Add new article entry for Zhou et al. (2025)
Signed-off-by: pchenfdu <98406322+pchenfdu@users.noreply.github.com>

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,16 @@
   bibtex_show = {true}
 }
 
+@article{zhou2025Finite,
+  abbr = {ISA Trans},
+  title = {Finite- and fixed-time privacy-preserving formation control for multiple quadrotor systems with input deplay and connectivity maintenance},
+  author = {Ding, Zhou and Ping, Chen and Zhigang, Cao and collaborators},
+  journal = {ISA Transactions},
+  year = {2025},
+  bibtex_show = {true},
+  selected = {true}
+}
+
 @incollection{chen2019rl,
   abbr = {Book},
   title = {Reinforcement Learning for Adaptive Cyber Defense Against Zero-Day Attacks},
