--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
   abbr = {ISA Trans},
   title = {Finite- and fixed-time privacy-preserving formation control for multiple quadrotor systems with input deplay and connectivity maintenance},
   author = {Ding, Zhou and Ping, Chen and Zhigang, Cao and collaborators},
-  journal = {ISA Transactions},
+  journal = {ISA Transactions, JCR Q1},
   year = {2025},
   bibtex_show = {true},
   selected = {true}
@@ -53,7 +53,7 @@
   abbr = {EMNLP},
   title = {RevPRAG: Revealing Poisoning Attacks in Retrieval-Augmented Generation through {LLM} Activation Analysis},
   author = {Tan, Xue and Luan, Hao and Luo, Mingyu and Sun, Xiaoyan and Chen, Ping and Dai, Jun},
-  booktitle = {Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing, CCF-B},
   year = {2025},
   selected = {true},
   bibtex_show = {true}
@@ -63,7 +63,7 @@
   abbr = {Sci. China Tech Sci},
   title = {Measurement of Intrinsic Safety Resilience in Perceived Decision Systems},
   author = {Liu, Yu and Chen, Ping},
-  journal = {Science China Technological Sciences},
+  journal = {Science China Technological Sciences, CCF-A},
   year = {2025},
   bibtex_show = {true},
   selected = {true}
@@ -73,7 +73,7 @@
   abbr = {ACL},
   title = {MIRAGE: Exploring How Large Language Models Perform in Complex Social Interactive Environments},
   author = {Cai, Yin and Chen, Ping},
-  booktitle = {Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics, CCF-A},
   year = {2025},
   bibtex_show = {true}
 }
@@ -82,7 +82,7 @@
   abbr = {CVPR},
   title = {Concept Replacer: Replacing Sensitive Concepts in Diffusion Models via Precision Localization},
   author = {Zhang, Lingyun and Xie, Yu and Fu, Yanwei and Chen, Ping},
-  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition, CCF-A},
   year = {2025},
   bibtex_show = {true},
   selected = {true}
@@ -92,7 +92,7 @@
   abbr = {JCS},
   title = {FedRAB: Robust Federated Learning Against Backdoor Attacks Based on Collaborative Defense with Smoothing},
   author = {Tan, Xue and Chen, Ping},
-  journal = {Journal of Computer Security},
+  journal = {Journal of Computer Security, CCF-B},
   year = {2025},
   bibtex_show = {true}
 }
@@ -101,7 +101,7 @@
   abbr = {Computer and Security},
   title = {FirmUpdate: Automated multi-phase static analysis for detecting firmware update vulnerabilities in IoT Linux-based firmware},
   author = {Zhang, Jian and Chen, Ping},
-  journal = {Computer and Security},
+  journal = {Computer and Security, CCF-B},
   year = {2025},
   bibtex_show = {true}
 }
@@ -110,7 +110,7 @@
   abbr = {JCS},
   title = {HuntFUZZ: Enhancing Error Handling Testing through Clustering Based Fuzzing},
   author = {Jin, Wei and Chen, Ping},
-  journal = {Journal of Computer Security},
+  journal = {Journal of Computer Security, CCF-B},
   year = {2025},
   bibtex_show = {true}
 }
@@ -119,7 +119,7 @@
   abbr = {JCS},
   title = {SQLaser: Detecting DBMS Logic Bugs with Clause-Guided Fuzzing},
   author = {Jin, Wei and Chen, Ping},
-  journal = {Journal of Computer Security},
+  journal = {Journal of Computer Security, CCF-B},
   year = {2025},
   bibtex_show = {true}
 }
@@ -128,7 +128,7 @@
   abbr = {JCS},
   title = {DSLR--: A Low-Overhead Data Structure Layout Randomization for Defending Data-Oriented Programming},
   author = {Jin, Wei and Chen, Ping},
-  journal = {Journal of Computer Security},
+  journal = {Journal of Computer Security, CCF-B},
   year = {2024},
   bibtex_show = {true}
 }
@@ -137,7 +137,7 @@
   abbr = {TDSC},
   title = {Semantics-Preserving Reinforcement Learning Attack Against Graph Neural Networks for Malware Detection},
   author = {Zhang, Lan and Liu, Peng and Choi, Yoon-Ho and Chen, Ping},
-  journal = {IEEE Transactions on Dependable and Secure Computing},
+  journal = {IEEE Transactions on Dependable and Secure Computing, CCF-A},
   year = {2022},
   bibtex_show = {true}
 }
@@ -146,7 +146,7 @@
   abbr = {TIFS},
   title = {A Co-design Adaptive Defense Scheme with Bounded Security Damages Against Heartbleed-like Attacks},
   author = {Hu, Zhisheng and Chen, Ping and Zhu, Minghui and Liu, Peng},
-  journal = {IEEE Transactions on Information Forensics and Security},
+  journal = {IEEE Transactions on Information Forensics and Security,CCF-A},
   year = {2021},
   bibtex_show = {true}
 }
@@ -155,7 +155,7 @@
   abbr = {JCS},
   title = {DEEPRETURN: A Deep Neural Network Can Learn How to Detect Previously-Unseen ROP Payloads without Using Any Heuristics},
   author = {Li, Xusheng and Hu, Zhisheng and Wang, Haizhou and Fu, Yiwei and Chen, Ping and Zhu, Minghui and Liu, Peng},
-  journal = {Journal of Computer Security},
+  journal = {Journal of Computer Security, CCF-B},
   year = {2020},
   bibtex_show = {true}
 }
@@ -164,7 +164,7 @@
   abbr = {Automatica},
   title = {On Convergence Rates of Game Theoretic Reinforcement Learning Algorithms},
   author = {Hu, Zhisheng and Zhu, Minghui and Chen, Ping and Liu, Peng},
-  journal = {Automatica},
+  journal = {Automatica, CCF-A},
   year = {2019},
   bibtex_show = {true}
 }
@@ -173,7 +173,7 @@
   abbr = {USENIX Security},
   title = {POMP: Postmortem Program Analysis with Hardware-Enhanced Post-Crash Artifacts},
   author = {Xu, Jun and Mu, Dongliang and Xing, Xinyu and Liu, Peng and Chen, Ping and Mao, Bing},
-  booktitle = {Proceedings of the 26th USENIX Security Symposium},
+  booktitle = {Proceedings of the 26th USENIX Security Symposium, CCF-A},
   year = {2017},
   bibtex_show = {true}
 }
@@ -182,7 +182,7 @@
   abbr = {DSN},
   title = {What You See Is Not What You Get! Thwarting Just-in-Time ROP with Chameleon},
   author = {Chen, Ping and Xu, Jun and Hu, Zhisheng and Xing, Xinyu and Zhu, Minghui and Mao, Bing and Liu, Peng},
-  booktitle = {Proceedings of the 47th Annual IEEE/IFIP International Conference on Dependable Systems and Networks},
+  booktitle = {Proceedings of the 47th Annual IEEE/IFIP International Conference on Dependable Systems and Networks,CCF-B},
   year = {2017},
   bibtex_show = {true}
 }
@@ -191,7 +191,7 @@
   abbr = {VEE},
   title = {Dancing with Wolves: Towards Practical Event-driven VMM Monitoring},
   author = {Liang, Deng and Liu, Peng and Xu, Jun and Chen, Ping and Zeng, Qingkai},
-  booktitle = {Proceedings of the 13th ACM SIGPLAN/SIGOPS International Conference on Virtual Execution Environments},
+  booktitle = {Proceedings of the 13th ACM SIGPLAN/SIGOPS International Conference on Virtual Execution Environments,CCF-B},
   year = {2017},
   bibtex_show = {true}
 }
@@ -200,7 +200,7 @@
   abbr = {CCS},
   title = {CREDAL: Towards Locating a Memory Corruption Vulnerability with Your Core Dump},
   author = {Xu, Jun and Mu, Dongliang and Chen, Ping and Xing, Xinyu and Liu, Peng},
-  booktitle = {Proceedings of the 23rd ACM Conference on Computer and Communications Security},
+  booktitle = {Proceedings of the 23rd ACM Conference on Computer and Communications Security,CCF-A},
   year = {2016},
   bibtex_show = {true}
 }
@@ -209,7 +209,7 @@
   abbr = {ESORICS},
   title = {A Practical Approach for Adaptive Data Structure Layout Randomization},
   author = {Chen, Ping and Xu, Jun and Lin, Zhiqiang and Mao, Bing and Liu, Peng},
-  booktitle = {Proceedings of the 20th European Symposium on Research in Computer Security},
+  booktitle = {Proceedings of the 20th European Symposium on Research in Computer Security, CCF-B},
   year = {2015},
   bibtex_show = {true}
 }
@@ -218,7 +218,7 @@
   abbr = {DSN},
   title = {System Call Redirection: A Practical Approach to Meeting Real-world VMI Needs},
   author = {Wu, Rui and Chen, Ping and Liu, Peng and Mao, Bing},
-  booktitle = {Proceedings of the 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks},
+  booktitle = {Proceedings of the 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks,CCF-B},
   year = {2014},
   bibtex_show = {true}
 }
